# urdf_vs

./: CMakeLists.txt  package.xml
config/: joint_names_robot.urdf.yaml
launch/: display.launch  gazebo.launch
meshes/: caster_wheel.STL  left_wheel.STL  link_ydlidar.STL  right_wheel.STL
urdf/: robot.urdf.csv  robot.urdf.urdf
