<package format="2">
  <name>robot_urdf</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for robot.urdf</p>
    <p>This package contains configuration data, 3D models, and launch files for the robot_urdf robot.</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">Maintainer Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies for this package -->
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>

  <export>
    <architecture_independent />
  </export>
</package>
